--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
             <version>1.3.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>14-ea+2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
